# api-open-ai

./: .env  .gitignore  draw_graph.py  main.py  main2.py  pyproject.toml  test.py
api/: routes_chat.py  routes_document.py
business/: rules.py
core/: exceptions.py
db/: save_document.py  save_images.py
graph/: graph_excecutor.py
llm/: llm.py  qween_llm.py
models/: chat_models.py  documents_models.py  state.py
services/: chat_service.py  prompt_service.py  stream_service.py
tools/: tools.py
