[project]
name = "api-open-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "fastapi[standard]>=0.119.0",
    "langgraph>=1.0.1",
    "ollama>=0.6.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.2",
    "starlette>=0.48.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers==4.57.0",
    "uvicorn>=0.37.0",
]
