[project]
name = "api-open-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "langchain>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "ollama>=0.6.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.2",
    "pydantic-mongo>=3.1.0",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
]
